fixing methods